Fixes large bugs, program now runs smoothly